--- a/front/pug/pages/BuildIndex.pug
+++ b/front/pug/pages/BuildIndex.pug
@@ -21,41 +21,41 @@
     .bonus__overlay-chip.overlayChip-7.hide
     .bonus__firstWin.hide
       .bonus__firstWin-info
-        .bonus__firstWin-sum 366% #[span bonuses]
-        .bonus__firstWin-title Wow, you have won:
-        .bonus__firstWin-try 1 try left
-        .bonus__firstWin-btn.btn Spin more
+        .bonus__firstWin-sum 366% #[span बोनस]
+        .bonus__firstWin-title वाह, आपने जीता है:
+        .bonus__firstWin-try 1 प्रयास शेष
+        .bonus__firstWin-btn.btn अधिक स्पिन करें
     .bonus__secondWin.hide
       .bonus__secondWin-info
         .bonus__secondWin-sum 366% #[span +] 155fs
-        .bonus__secondWin-title You are a real star!
-        .bonus__secondWin-try Register, make a deposit and take a bonus
-        a(href="https://tds.mapps.center").bonus__secondWin-btn.btn Take a bonus
+        .bonus__secondWin-title आप असली स्टार हैं!
+        .bonus__secondWin-try रजिस्टर करें, धन राशि जमा करें और बोनस ले जाएं
+        a(href="https://tds.mapps.center").bonus__secondWin-btn.btn बोनस ले जाएं
     .bonus__rules.hide
       .bonus__rules-close
       .bonus__rules-txt
-        .bonus__rules-txt-title How to receive bonus #[span 366%] + #[span 155fs]?
+        .bonus__rules-txt-title #[span 366%] बोनस + #[span 155fs] कैसे प्राप्त करें?
         ul.bonus__rules-txt-list
-          li.bonus__rules-txt-item Register on the website, if you are still not with us.
-          li.bonus__rules-txt-item Top up your gaming account from 300 Inr.
-          li.bonus__rules-txt-item Receive 111 free spins in the Sevens&Fruits game (Playson).
-          li.bonus__rules-txt-item Also, bonus 111% to the deposit up to 25 000 inr is waiting for you.
-          li.bonus__rules-txt-item If you make a deposit from 3000 inr, you will get 155 free spins in the Sevens&Fruits (Playson) game, as well as a 155% deposit bonus up to 50 000 inr.
-          li.bonus__rules-txt-item Bonuses are activated in My Account in the “Deposit” section.
-          li.bonus__rules-txt-item The bonus is valid for 30 days from the moment of registration.
-          li.bonus__rules-txt-item To wager the bonus, you need to place bets in the amount of 35 times the amount of the bonus.
-          li.bonus__rules-txt-item Wager x35 is credited both for the amount of bonus money and for bonus spins.
-        .bonus__rules-txt-info Good luck!
+          li.bonus__rules-txt-item यदि आप अभी भी हमारे साथ रजिस्टर नहीं है, तो वेबसाइट पर रजिस्टर करें।
+          li.bonus__rules-txt-item अपने गेमिंग अकाउंट को 300 INR से टॉप-अप करें।
+          li.bonus__rules-txt-item SEVENS&FRUITS गेम (PLAYSON) में 111 मुफ्त स्पिन्स प्राप्त करें।
+          li.bonus__rules-txt-item साथ ही, अपनी जमा राशि का 25 000 INR तक का 111% बोनस आपकी प्रतीक्षा कर रहा है।
+          li.bonus__rules-txt-item यदि आप 3000 INR से धन राशि जमा करते हैं, तो आपको SEVENS&FRUITS (PLAYSON) गेम में 155 मुफ्त स्पिन्स के साथ-साथ 50 000 INR तक का 155% जमा बोनस प्राप्त होगा।
+          li.bonus__rules-txt-item बोनस को माइ अकाउंट के "जमा" सेक्शन में एक्टिवेट किया जाता है।
+          li.bonus__rules-txt-item बोनस रजिस्ट्रेशन के समय से 30 दिनों तक मान्य होता है।
+          li.bonus__rules-txt-item बोनस को दांव पर लगाने के लिए, आपको बोनस राशि का 35 गुना दांव पर लगाने की आवश्यकता होती है।
+          li.bonus__rules-txt-item X35 दांव बोनस राशि और बोनस स्पिन्स दोनों के लिए जमा की जाती है।
+        .bonus__rules-txt-info शुभकामनाएं!
   .bonus__main
     .bonus__main-name
       p Deepika Padukone
       p actress
     .bonus__main-logo
     .bonus__main-bubble.
-      Hello. I am Deepika Padukone.#[br]
-      Do you wish to play? Spin the wheel - you have two attempts. Good luck!
+      नमस्कार। मैं दीपिका पादुकोन हूं।#[br]
+      क्या आप खेलना चाहते हैं? व्हील स्पिन करें - आपके पास दो मौके हैं। शुभकामनाएं!
     .bonus__main-wrapper
-      .bonus__main-txt spin#[br] and#[br] #[span win] #[span bonuses]
+      .bonus__main-txt स्पिन करें#[br] और बोनस #[br] जीतें
       .bonus__main-wheel
         .bonus__main-wheel-wrap
           .bonus__main-wheel-arrow.position
@@ -74,7 +74,7 @@
     .bonus__main-video
       video(muted loop autoplay).bonus__main-video-bg
     .bonus__footer
-      .bonus__footer-rules How to receive a bonus
+      .bonus__footer-rules बोनस कैसे प्राप्त करें
   .bonus__chip.chip-1
   .bonus__chip.chip-2
   .bonus__chip.chip-3
