--- a/front/sass/pages/index.sass
+++ b/front/sass/pages/index.sass
@@ -10,6 +10,11 @@ $font-suisse-med: SuisseIntl-Medium, sans-serif
 $font-suisse-semb: SuisseIntl-SemiBold, sans-serif
 $font-rubik: Rubik, sans-serif
 
+$font-pop-reg: Poppins-reg, sans-serif //400
+$font-pop-med: Poppins-med, sans-serif //500
+$font-pop-semb: Poppins-semb, sans-serif //600
+$font-pop-bold: Poppins-bold, sans-serif //700
+
 body
   -webkit-tap-highlight-color: rgba(0,0,0,0)
   overscroll-behavior: none
@@ -30,7 +35,7 @@ body
   margin: auto
 
 .btn
-  font-family: $font-suisse-semb
+  font-family: $font-pop-semb
   font-size: 18px
   color: $blue
   text-transform: uppercase
@@ -177,7 +182,7 @@ body
       left: 0
       right: 0
     &-title
-      font-family: $font-suisse-semb
+      font-family: $font-pop-bold
       font-size: 22px
       line-height: 22px
       color: $grey
@@ -186,13 +191,13 @@ body
       text-align: center
       margin: 27px 0 20px
     &-sum
-      font-family: $font-rubik
+      font-family: $font-pop-bold
       line-height: 70px
       color: $magenta
       text-transform: uppercase
       letter-spacing: 0.01em
     &-try
-      font-family: $font-suisse-med
+      font-family: $font-pop-semb
       font-size: 18px
       line-height: 24px
       color: $grey
@@ -279,19 +284,21 @@ body
       &::-webkit-scrollbar-thumb
         background: $green
       &-title
-        font-family: $font-suisse-semb
+        font-family: $font-pop-semb
         font-size: 40px
         line-height: 44px
         color: $grey
         text-transform: uppercase
         letter-spacing: 0.03em
+        max-width: 547px
         span
           color: $magenta
       &-list
         margin-top: 25px
         counter-reset: item
+        max-width: 600px
       &-item
-        font-family: $font-suisse-med
+        font-family: $font-pop-med
         font-size: 18px
         line-height: 28px
         color: $grey
@@ -303,13 +310,13 @@ body
         &:before
           content: "" counter(item) "."
           counter-increment: item
-          font-family: $font-suisse-med
+          font-family: $font-pop-bold
           font-size: 18px
           line-height: 28px
           color: $magenta
           margin-right: 5px
       &-info
-        font-family: $font-suisse-bold
+        font-family: $font-pop-bold
         color: $magenta
         margin-top: 30px
         font-size: 24px
@@ -324,7 +331,7 @@ body
       top: 10px
       right: 10px
       text-align: right
-      font-family: $font-suisse-med
+      font-family: $font-pop-med
       letter-spacing: 0.01em
       z-index: 3
       display: none
@@ -367,11 +374,11 @@ body
       position: absolute
       top: -21px
       right: -32px
-      font-family: $font-suisse-med
+      font-family: $font-pop-med
       color: $grey
       font-size: 19px
       line-height: 28px
-      padding: 72px 73px 0
+      padding: 72px 77px 0
       letter-spacing: 0.03em
       z-index: 3
       @media screen and (min-width: 551px) and (min-height: 500px)
@@ -381,7 +388,7 @@ body
       z-index: 2
       transform: translateX(-17px)
     &-txt
-      font-family: $font-suisse-bold
+      font-family: $font-pop-bold
       font-size: 90px
       line-height: 98px
       color: $grey
@@ -391,13 +398,14 @@ body
       position: absolute
       bottom: 202px
       left: -426px
+      z-index: 2
       span
         color: $magenta
       br
         &:first-of-type
           display: block
         &:last-of-type
-          display: none
+          display: block
     &-wheel
       width: 857px
       height: 910px
@@ -515,7 +523,7 @@ body
     display: flex
     justify-content: flex-start
     &-rules
-      font-family: $font-suisse-semb
+      font-family: $font-pop-semb
       font-size: 20px
       color: $grey
       text-transform: uppercase
